--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,22 +1,19 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  - title: "Assignment 1"
+    url: /assignment-1/
 
-  - title: "Talks"
-    url: /talks/    
+  - title: "Assignment 2"
+    url: /assignment-2/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Assignment 3"
+    url: /assignment-3/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Assignment 4"
+    url: /assignment-4/
         
-  - title: "Blog Posts"
-    url: /year-archive/
-    
-  - title: "CV"
-    url: /cv/
+  - title: "Assignment 5"
+    url: /assignment-5/
     
   - title: "Guide"
     url: /markdown/
