--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Group 13"
-  avatar           : "profile.png"
+  avatar           : "G13.jpeg"
   bio              : "Your biography for the left-hand sidebar"
   # location         : "Location"
   employer         :
