--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,9 @@ analytics:
 author:
   name             : "Group 13"
   avatar           : "G13.jpeg"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Ann An
+                      Marshall Ma
+                      Gaston, Cordero Chaves"
   # location         : "Location"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
