--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   avatar           : "G13.jpeg"
   bio              : "Ann An\n
                       Marshall Ma\n
-                      Gaston Cordero Chaves"
+                      Gaston Cordero Chaves\n"
   # location         : "Location"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
