--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,10 @@ analytics:
 author:
   name             : "Group 13"
   avatar           : "G13.jpeg"
-  bio              : "Ann An\n
-                      Marshall Ma\n
-                      Gaston Cordero Chaves\n"
+  bio              : >
+                     "Ann An
+                      Marshall Ma
+                      Gaston Cordero Chaves"
   # location         : "Location"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
