--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ author:
   name             : "Group 13"
   avatar           : "G13.jpeg"
   bio              : >
-                     "Ann An
-                      Marshall Ma
-                      Gaston Cordero Chaves"
+                     Ann An
+                     Marshall Ma
+                     Gaston Cordero Chaves
   # location         : "Location"
   employer         :
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
